--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p {
   margin: auto;
   cursor: pointer;
   color: white;
-  border-radius:50px;
+  
 }
 table,
 th,
@@ -76,4 +76,8 @@ tr:hover {
 
 h3 {
   display: none;
+}
+* {
+  margin: 0;
+  padding: 0;
 }
